force-app/logging/objects/CoreLibs_MonitoringRule__c/CoreLibs_MonitoringRule__c.object-meta.xml
<CustomObject>
    <description>Object for storing rules that execute monitoring activities on the Salesforce platform.</description>
    <label>Salesforce Monitoring Rule</label>
    <nameField>
        <label>Monitoring Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monitoring Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>