force-app/logging/objects/CoreLibs_MonitoringRule__c/fields/AlertType__c.field-meta.xml
<CustomField>
    <fullName>AlertType__c</fullName>
    <description>The type of alert that should be sent out.</description>
    <inlineHelpText>The type of alert that should be sent out.</inlineHelpText>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>