force-app/logging/objects/CoreLibs_MonitoringRule__c/fields/ClassName__c.field-meta.xml
<CustomField>
    <fullName>ClassName__c</fullName>
    <formula>IF(
  NOT(ISBLANK(CustomClass__c)), 
  CustomClass__c,
  CASE(RecordType.DeveloperName , 
  &apos;QueryRule&apos;, &apos;QueryRuleProcessor&apos;,
  &apos;&apos;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Name</label>
    <type>Text</type>
</CustomField>