force-app/logging/objects/CoreLibs_MonitoringRule__c/fields/CustomClass__c.field-meta.xml
<CustomField>
    <fullName>CustomClass__c</fullName>
    <description>Custom class to be used for the rule.</description>
    <inlineHelpText>Custom class to be used for the rule.</inlineHelpText>
    <label>Custom Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>