force-app/logging/objects/CoreLibs_MonitoringRule__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the rule is active.</description>
    <inlineHelpText>Whether or not the rule is active.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>