force-app/logging/objects/CoreLibs_MonitoringRule__c/fields/QueryFilter__c.field-meta.xml
<CustomField>
    <fullName>QueryFilter__c</fullName>
    <description>Query filter used to return record counts to measure against the threshold.</description>
    <inlineHelpText>Query filter used to return record counts to measure against the threshold.</inlineHelpText>
    <label>Query Filter</label>
    <type>TextArea</type>
</CustomField>