force-app/logging/objects/CoreLibs_MonitoringRule__c/fields/QuerySObjectType__c.field-meta.xml
<CustomField>
    <fullName>QuerySObjectType__c</fullName>
    <description>The SObject that the query rule should run against.</description>
    <inlineHelpText>The SObject that the query rule should run against.</inlineHelpText>
    <label>Query SObject Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>