force-app/logging/objects/CoreLibs_MonitoringRule__c/fields/RecordCountThreshold__c.field-meta.xml
<CustomField>
    <fullName>RecordCountThreshold__c</fullName>
    <description>The threshold at which an alert should be created once exceeded.</description>
    <inlineHelpText>The threshold at which an alert should be created once exceeded.</inlineHelpText>
    <label>Record Count Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>