force-app/logging/objects/CoreLibs_MonitoringRule__c/fields/SinceLastRun__c.field-meta.xml
<CustomField>
    <fullName>SinceLastRun__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether to filter our records since the last run, or include all historic records.</description>
    <inlineHelpText>Determines whether to filter our records since the last run, or include all historic records.</inlineHelpText>
    <label>Since Last Run</label>
    <type>Checkbox</type>
</CustomField>