force-app/logging/objects/CoreLibs_MonitoringRule__c/recordTypes/QueryRule.recordType-meta.xml
<RecordType>
    <fullName>QueryRule</fullName>
    <active>true</active>
    <description>Record type for query based alerting rules</description>
    <label>Query Rule</label>
</RecordType>